# RideView

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  RideView-PRD-v2.5-recording-crossplatform.md  pyproject.toml  setup.bat
.github/workflows/: ci.yml  release.yml
config/: default.yaml  development.yaml
docs/: USER_MANUAL.md  generate_pdf.sh
scripts/: calibrate_colors.py  capture_samples.py
src/rideview/: __init__.py  __main__.py
src/rideview/core/: __init__.py  camera.py  config.py  detector.py  result.py
src/rideview/detection/: __init__.py  color_segmenter.py  fastener_detector.py  line_analyzer.py  preprocessor.py  stripe_validator.py
src/rideview/mobile/: __init__.py  app.py  camera_provider.py  detection_worker.py  groq_validator.py  recording_manager.py
src/rideview/mobile/screens/: __init__.py  main_screen.py  recordings_screen.py  settings_screen.py  tuning_screen.py
src/rideview/mobile/widgets/: __init__.py  camera_preview.py  rec_button.py  status_overlay.py
src/rideview/utils/: __init__.py  visualization.py
src/rideview/web/: __init__.py  app.py
src/rideview/web/routes/: __init__.py  api.py  stream.py
src/rideview/web/static/css/: main.css
src/rideview/web/static/js/: app.js
src/rideview/web/templates/: base.html  index.html
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_color_segmenter.py  test_fastener_detector.py  test_line_analyzer.py  test_stripe_validator.py
