[project]
name = "rideview"
version = "3.1.0"
description = "Torque stripe verification system using computer vision"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "RideView Team" }
]
keywords = ["computer-vision", "opencv", "bolt-inspection", "torque-stripe", "industrial-maintenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "flask>=3.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
web = [
    "gunicorn>=21.0.0",
]
mobile = [
    "kivy>=2.3.0",
    "kivymd>=1.2.0",
    "pillow>=10.0.0",
]
llm = [
    "groq>=0.4.0",
    "llama-cpp-python>=0.2.0",
]
all = [
    "rideview[dev,web,mobile,llm]",
]

[project.scripts]
rideview = "rideview.__main__:main"

[project.urls]
Homepage = "https://github.com/Mikecranesync/RideView"
Repository = "https://github.com/Mikecranesync/RideView.git"
Issues = "https://github.com/Mikecranesync/RideView/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rideview"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
